--- a/docker-compose/docker-compose.ecs.yml
+++ b/docker-compose/docker-compose.ecs.yml
@@ -4,7 +4,7 @@ version: '3'
 
 services:
   osm2pgrouting: &osm2pgrouting
-    image: xxxxxxxx.dkr.ecr.us-east-1.amazonaws.com/osm2pgrouting
+    image: xxxxxxxx.dkr.ecr.us-east-1.amazonaws.com/osm2pgrouting:latest
     build: .
     env_file:
       - ./.env
