--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,3 +1,6 @@
+#### Store secret values here. Also store OSM data URLs here.
+#### Downloading the data in entrypoint.sh makes the Docker image waaaay smaller
+
 AWS_ECR_REPOSITORY=xxxxx.dkr.ecr.us-east-1.amazonaws.com/osm2pgrouting:latest
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY=xxxxxxxxxxxxx
