--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,5 +1,6 @@
 #### Store secret values here. Also store OSM data URLs here.
 #### Downloading the data in entrypoint.sh makes the Docker image waaaay smaller
+#### This file is read by the docker-compose command, as specified in docker-compose.yml
 
 AWS_ECR_REPOSITORY=xxxxx.dkr.ecr.us-east-1.amazonaws.com/osm2pgrouting:latest
 AWS_REGION=us-east-1
